k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: combined-services
spec:
  type: NodePort
  selector:
    app: combined-services
  ports:
    - name: service1
      port: 3001
      targetPort: 3001
      nodePort: 30001
    - name: service2
      port: 3002
      targetPort: 3002
      nodePort: 30002
