k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: combined-services
                port:
                  number: 3001
          - path: /socket
            pathType: Prefix
            backend:
              service:
                name: combined-services
                port:
                  number: 3002
